{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 120,
  "lineage": "00238ab4-5620-40f4-81b2-2c8190ab7b58",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "container-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0337c8d6fb02b2dcf",
            "arn": "arn:aws:ec2:us-east-1:851272254651:instance/i-0211b8abacff36d1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0211b8abacff36d1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "container-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-023b7fefbee830aa0",
            "private_dns": "ip-10-0-1-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.152",
            "public_dns": "ec2-35-171-26-197.compute-1.amazonaws.com",
            "public_ip": "35.171.26.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-086886df3930802b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08540087d479b01e5",
            "tags": {
              "Name": "container-ec2"
            },
            "tags_all": {
              "Name": "container-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a61ec12b1178c24"
            ]
          },
          "dependencies": [
            "aws_key_pair.container-key",
            "aws_security_group.webserver-security-group",
            "aws_subnet.container",
            "aws_vpc.container-vpc",
            "data.aws_ami.ubuntu-2204-LTS"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851272254651:internet-gateway/igw-0c25e8958e2645b22",
            "id": "igw-0c25e8958e2645b22",
            "owner_id": "851272254651",
            "tags": {
              "Name": "container-igw"
            },
            "tags_all": {
              "Name": "container-igw"
            },
            "vpc_id": "vpc-0aabf582cf8276c27"
          },
          "dependencies": [
            "aws_vpc.container-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851272254651:route-table/rtb-0ae723668ba8ad449",
            "id": "rtb-0ae723668ba8ad449",
            "owner_id": "851272254651",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c25e8958e2645b22",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aabf582cf8276c27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.container-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ec6652bd3817989",
            "route_table_id": "rtb-0ae723668ba8ad449",
            "subnet_id": "subnet-08540087d479b01e5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_subnet.container",
            "aws_vpc.container-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851272254651:security-group/sg-03a61ec12b1178c24",
            "description": "Enable http/https access on port 80/443 via ALB and ssh via ssh sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a61ec12b1178c24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web server Security Group",
            "name_prefix": "",
            "owner_id": "851272254651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web server Security group"
            },
            "tags_all": {
              "Name": "Web server Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aabf582cf8276c27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.container-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "container",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851272254651:subnet/subnet-08540087d479b01e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08540087d479b01e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851272254651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-web-subnet-1"
            },
            "tags_all": {
              "Name": "public-web-subnet-1"
            },
            "vpc_id": "vpc-0aabf582cf8276c27"
          },
          "dependencies": [
            "aws_vpc.container-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "container-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851272254651:vpc/vpc-0aabf582cf8276c27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03d487ebf370704b6",
            "default_route_table_id": "rtb-08e62f4a52ade5e71",
            "default_security_group_id": "sg-00c22007f22515dba",
            "dhcp_options_id": "dopt-0de16d2f55a95092b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aabf582cf8276c27",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e62f4a52ade5e71",
            "owner_id": "851272254651",
            "tags": {
              "Name": "multi-resources"
            },
            "tags_all": {
              "Name": "multi-resources"
            }
          }
        }
      ]
    }
  ]
}